final program code

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Teko&display=swap" rel="stylesheet">
+    <link rel="icon" href="/logo.png">
 </head>
 <body>
     <div class="topbar">
         <h1 class="title">VALORANT Random Generator</h1>
-        <img class="topbar-image" src="/valorant.png" alt="valorant logo">
+        <img class="logo" src="/valorant.png" alt="valorant logo">
     </div>
     <form class="generator-options">
         <button id="map-button" type="button">Generate maps</button>
